<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/layoutBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/check"
        app:centerIfNoTextEnabled="false" />

    <Button
        android:id="@+id/btnExplicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|center_vertical"
        android:text="@string/btn_exp" />

    <Button
        android:id="@+id/btnRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:text="@string/btn_res" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ACTION1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action1"
            android:onClick="onClickButtonAction1"/>

        <Button
            android:id="@+id/ACTION2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action2"
            android:onClick="onClickButtonAction2"/>


        <Button
            android:id="@+id/ACTION_VIEW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action3"
            android:onClick="onClickButtonActionView"/>
    </LinearLayout>

</LinearLayout>